--- a/deploy/index.html
+++ b/deploy/index.html
@@ -22,7 +22,8 @@
             <section>
                 <nav>
                     <ul>
-                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Shop</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
@@ -37,8 +38,9 @@
         <article>
     
             <section id="hero-content">
-                <h1>Welcome</h1>
-                <h2>to Motion for the web!</h2>
+                <h1>Freedom</h1>
+                <h2>of</h2>
+                <h1>Espresso</h1>
             </section> 
     
         <article>
@@ -48,8 +50,8 @@
 
     <section id="content">
         <div>
-            <h1>Mountains</h1>
-            <p>A mountain is an elevated portion of the Earth's crust, generally with steep sides that show significant exposed bedrock. ... Once mountain building ceases, mountains are slowly leveled through the action of weathering, through slumping and other forms of mass wasting, as well as through erosion by rivers and glaciers.</p>
+            <h1>Coffee</h1>
+            <p>Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain flowering plants in the Coffea genus. From the coffee fruit, the seeds are separated to produce a stable, raw product: unroasted green coffee. The seeds are then roasted, a process which transforms them into a consumable product: roasted coffee, which is ground into fine particles that are typically steeped in hot water before being filtered out, producing a cup of coffee.</p>
         </div>
     </section>
 
