--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,7 +17,7 @@
     <header>
         <div>
             <aside>
-                <a href="#"><img src="img/logo.svg" alt="fox logo"></a>
+                <a href="#"><img src="img/logo.svg" alt="coffee-logo" class="cupMove"></a>
             </aside>
             <section>
                 <nav class="tabs">
@@ -50,8 +50,8 @@
 
     <section id="content">
         <div>
-            <h1>Coffee</h1>
-            <p>Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain flowering plants in the Coffea genus. From the coffee fruit, the seeds are separated to produce a stable, raw product: unroasted green coffee. The seeds are then roasted, a process which transforms them into a consumable product: roasted coffee, which is ground into fine particles that are typically steeped in hot water before being filtered out, producing a cup of coffee.</p>
+            <h1 class="coffeehead">Coffee</h1>
+            <p class="coffeecontent">Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain flowering plants in the Coffea genus. From the coffee fruit, the seeds are separated to produce a stable, raw product: unroasted green coffee. The seeds are then roasted, a process which transforms them into a consumable product: roasted coffee, which is ground into fine particles that are typically steeped in hot water before being filtered out, producing a cup of coffee.</p>
         </div>
     </section>
 
